--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-type-safe-routes",
+  "name": "@steuerbot/next-type-safe-routes",
   "version": "0.3.1-alpha.1",
   "description": "Never should your users experience broken links again!",
   "main": "dist/index.js",
