--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@steuerbot/next-type-safe-routes",
-  "version": "0.3.1-alpha.1",
+  "version": "0.4.0",
   "description": "Never should your users experience broken links again!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
